REGRESSION (r184337): [EFL] unresolved reference errors in ARM builds https://bugs.webkit.org/show_bug.cgi?id=145019

Reviewed by Ryosuke Niwa.

Attempt to fix compile errors in EFL ARM buildbots.
By executing `nm`, found JSTemplateRegistryKey.cpp.o and TemplateRegistry.cpp.o have
unresolved reference to Structure::get. That is inlined function in StructureInlines.h.

* runtime/JSTemplateRegistryKey.cpp:
* runtime/TemplateRegistry.cpp:

Canonical link: https://commits.webkit.org/163052@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184352 268f45cc-cd09-0410-ab3c-d52691b4dbfc